--- a/fused-effects-parser.cabal
+++ b/fused-effects-parser.cabal
@@ -18,6 +18,8 @@ extra-source-files:
 library
   default-language:    Haskell2010
   hs-source-dirs:      src
+  exposed-modules:
+    Control.Effect.Parser
   build-depends:       base ^>= 4.12
 
 test-suite fused-effects-parser-test
