--- a/fused-effects-parser.cabal
+++ b/fused-effects-parser.cabal
@@ -15,8 +15,26 @@ category:            Language
 extra-source-files:
   CHANGELOG.md
 
+common common
+  default-language: Haskell2010
+  ghc-options:
+    -Weverything
+    -Wno-all-missed-specialisations
+    -Wno-implicit-prelude
+    -Wno-missed-specialisations
+    -Wno-missing-import-lists
+    -Wno-missing-local-signatures
+    -Wno-monomorphism-restriction
+    -Wno-name-shadowing
+    -Wno-safe
+    -Wno-unsafe
+  if (impl(ghc >= 8.6))
+    ghc-options: -Wno-star-is-type
+  if (impl(ghc >= 8.8))
+    ghc-options: -Wno-missing-deriving-strategies
+
 library
-  default-language:    Haskell2010
+  import: common
   hs-source-dirs:      src
   exposed-modules:
     Control.Effect.Parser
@@ -26,7 +44,7 @@ library
     , semantic-source ^>= 0
 
 test-suite fused-effects-parser-test
-  default-language:    Haskell2010
+  import: common
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Test.hs
