--- a/fused-effects-parser.cabal
+++ b/fused-effects-parser.cabal
@@ -42,6 +42,7 @@ library
   build-depends:
       base ^>= 4.12
     , fused-effects ^>= 1
+    , parsers ^>= 0.12
     , prettyprinter ^>= 1.5
     , prettyprinter-ansi-terminal ^>= 1.1
     , semantic-source ^>= 0
