--- a/fused-effects-parser.cabal
+++ b/fused-effects-parser.cabal
@@ -52,4 +52,6 @@ test-suite test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Test.hs
-  build-depends:       base ^>= 4.12
+  build-depends:
+      base
+    , fused-effects-parser
