--- a/fused-effects-parser.cabal
+++ b/fused-effects-parser.cabal
@@ -56,6 +56,7 @@ test-suite test
       base
     , fused-effects
     , fused-effects-parser
+    , parsers
     , semantic-source
     , tasty ^>= 1.2
     , tasty-hunit ^>= 0.10
