--- a/fused-effects-parser.cabal
+++ b/fused-effects-parser.cabal
@@ -39,6 +39,7 @@ library
   exposed-modules:
     Control.Carrier.Parser.Church
     Control.Effect.Parser
+    Control.Effect.Parser.Excerpt
   build-depends:
       base ^>= 4.12
     , fused-effects ^>= 1
