--- a/fused-effects-parser.cabal
+++ b/fused-effects-parser.cabal
@@ -42,7 +42,7 @@ library
     Control.Effect.Parser.Excerpt
     Control.Effect.Parser.Notice
   build-depends:
-      base ^>= 4.12
+      base >= 4.12 && < 5
     , fused-effects ^>= 1
     , parsers ^>= 0.12
     , prettyprinter ^>= 1.5
