--- a/fused-effects-parser.cabal
+++ b/fused-effects-parser.cabal
@@ -48,6 +48,7 @@ library
     , prettyprinter ^>= 1.5
     , prettyprinter-ansi-terminal ^>= 1.1
     , semantic-source ^>= 0
+    , transformers >= 0.4 && < 0.6
 
 test-suite test
   import: common
