--- a/fused-effects-parser.cabal
+++ b/fused-effects-parser.cabal
@@ -60,6 +60,7 @@ test-suite test
     , fused-effects
     , fused-effects-parser
     , parsers
+    , prettyprinter
     , semantic-source
     , tasty ^>= 1.2
     , tasty-hunit ^>= 0.10
