--- a/fused-effects-parser.cabal
+++ b/fused-effects-parser.cabal
@@ -58,6 +58,7 @@ test-suite test
   main-is:             Test.hs
   build-depends:
       base
+    , containers
     , fused-effects
     , fused-effects-parser
     , parsers
