--- a/fused-effects-parser.cabal
+++ b/fused-effects-parser.cabal
@@ -42,7 +42,7 @@ library
     Control.Effect.Parser.Excerpt
     Control.Effect.Parser.Notice
   build-depends:
-      base >= 4.12 && < 5
+    , base >= 4.12 && < 5
     , containers >= 0.5 && < 0.7
     , fused-effects ^>= 1
     , parsers ^>= 0.12
@@ -57,7 +57,7 @@ test-suite test
   hs-source-dirs:      test
   main-is:             Test.hs
   build-depends:
-      base
+    , base
     , containers
     , fused-effects
     , fused-effects-parser
