--- a/fused-effects-parser.cabal
+++ b/fused-effects-parser.cabal
@@ -42,6 +42,7 @@ library
     Control.Effect.Parser.Excerpt
     Control.Effect.Parser.Lines
     Control.Effect.Parser.Notice
+    Control.Effect.Parser.Path
   build-depends:
     , base >= 4.12 && < 5
     , containers >= 0.5 && < 0.7
