--- a/fused-effects-parser.cabal
+++ b/fused-effects-parser.cabal
@@ -43,6 +43,8 @@ library
     Control.Effect.Parser.Lines
     Control.Effect.Parser.Notice
     Control.Effect.Parser.Path
+  other-modules:
+    Control.Effect.Parser.Lens
   build-depends:
     , base >= 4.12 && < 5
     , containers >= 0.5 && < 0.7
