--- a/hie.yaml
+++ b/hie.yaml
@@ -1,4 +1,6 @@
 cradle:
-  bios:
-    program: script/ghci-flags
-    dependency-program: script/ghci-flags-dependencies
+  cabal:
+    - path: "./src"
+      component: "lib:fused-effects-parser"
+    - path: "./test"
+      component: "test:test"
