--- a/fused-effects-parser.cabal
+++ b/fused-effects-parser.cabal
@@ -69,6 +69,7 @@ test-suite test
     , fused-effects-parser
     , hedgehog ^>= 1
     , parsers
+    , prettyprinter-ansi-terminal
     , tasty ^>= 1.2
     , tasty-hedgehog ^>= 1
     , tasty-hunit ^>= 0.10
