--- a/fused-effects-parser.cabal
+++ b/fused-effects-parser.cabal
@@ -53,7 +53,7 @@ library
     , fused-effects ^>= 1.1
     , parsers ^>= 0.12
     , prettyprinter ^>= 1.7
-    , transformers >= 0.4 && < 0.6
+    , transformers >= 0.4 && < 0.7
 
 test-suite test
   import: common
@@ -64,8 +64,8 @@ test-suite test
     , base
     , containers
     , fused-effects-parser
-    , hedgehog ^>= 1
+    , hedgehog >= 1 && <2
     , parsers
-    , tasty ^>= 1.2
-    , tasty-hedgehog ^>= 1
+    , tasty >= 1.2 && <2
+    , tasty-hedgehog >= 1 && <2
     , tasty-hunit ^>= 0.10
